--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle</title>
+    <link rel = "icon" href = "images/logo.png" type = "image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
         <button class="menuBtn openMenu" onclick="openMenu()">☰</button>
         <button class="menuBtn closeMenu" onclick="closeMenu()">X</button>
 
-        <h1>WORDLE</h1>
+        <img src="images/wordle.png" alt="Wordle logo">
 
         <!-- ===== HELP BUTTON ===== -->
         <button class="help-btn" type="submit" onclick="show(help)">?</button>
