--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <!-- ===== NAV MENU ===== -->
         <nav class="navMenu">
             <a onclick="closeMenu(); resetGame(); generateRandomWord();">New Game</a>
-            <a onclick="show(level); closeMenu()">Level</a>
-            <a onclick="show(scoreRules); closeMenu()">Score</a>
-            <a onclick="show(help); closeMenu()">Help</a>
+            <a onclick="closeMenu(); show(level);">Level</a>
+            <a onclick="closeMenu(); show(scoreRules);">Score</a>
+            <a onclick="closeMenu(); show(help);">Help</a>
             <a onclick="closeMenu(); resetGame(); disableInput(); setMsg('');">Exit</a>
         </nav>
 
