set keyboard keys background

--- a/index.html
+++ b/index.html
@@ -151,37 +151,37 @@
 
         <div id="keyboard-cont">
             <div class="first-row">
-                <button class="keyboard-button" value="q">q</button>
-                <button class="keyboard-button" value="w">w</button>
-                <button class="keyboard-button" value="e">e</button>
-                <button class="keyboard-button" value="r">r</button>
-                <button class="keyboard-button" value="t">t</button>
-                <button class="keyboard-button" value="y">y</button>
-                <button class="keyboard-button" value="u">u</button>
-                <button class="keyboard-button" value="i">i</button>
-                <button class="keyboard-button" value="o">o</button>
-                <button class="keyboard-button" value="p">p</button>
+                <button class="keyboard-button" value="Q">q</button>
+                <button class="keyboard-button" value="W">w</button>
+                <button class="keyboard-button" value="E">e</button>
+                <button class="keyboard-button" value="R">r</button>
+                <button class="keyboard-button" value="T">t</button>
+                <button class="keyboard-button" value="Y">y</button>
+                <button class="keyboard-button" value="U">u</button>
+                <button class="keyboard-button" value="I">i</button>
+                <button class="keyboard-button" value="O">o</button>
+                <button class="keyboard-button" value="P">p</button>
             </div>
             <div class="second-row">
-                <button class="keyboard-button" value="a">a</button>
-                <button class="keyboard-button" value="s">s</button>
-                <button class="keyboard-button" value="d">d</button>
-                <button class="keyboard-button" value="f">f</button>
-                <button class="keyboard-button" value="g">g</button>
-                <button class="keyboard-button" value="h">h</button>
-                <button class="keyboard-button" value="j">j</button>
-                <button class="keyboard-button" value="k">k</button>
-                <button class="keyboard-button" value="l">l</button>
+                <button class="keyboard-button" value="A">a</button>
+                <button class="keyboard-button" value="S">s</button>
+                <button class="keyboard-button" value="D">d</button>
+                <button class="keyboard-button" value="F">f</button>
+                <button class="keyboard-button" value="G">g</button>
+                <button class="keyboard-button" value="H">h</button>
+                <button class="keyboard-button" value="J">j</button>
+                <button class="keyboard-button" value="K">k</button>
+                <button class="keyboard-button" value="L">l</button>
             </div>
             <div class="third-row">
                 <button class="keyboard-button" value="del">Del</button>
-                <button class="keyboard-button" value="z">z</button>
-                <button class="keyboard-button" value="x">x</button>
-                <button class="keyboard-button" value="c">c</button>
-                <button class="keyboard-button" value="v">v</button>
-                <button class="keyboard-button" value="b">b</button>
-                <button class="keyboard-button" value="n">n</button>
-                <button class="keyboard-button" value="m">m</button>
+                <button class="keyboard-button" value="Z">z</button>
+                <button class="keyboard-button" value="X">x</button>
+                <button class="keyboard-button" value="C">c</button>
+                <button class="keyboard-button" value="V">v</button>
+                <button class="keyboard-button" value="B">b</button>
+                <button class="keyboard-button" value="N">n</button>
+                <button class="keyboard-button" value="M">m</button>
                 <button class="keyboard-button" value="enter">Enter</button>
             </div>
         </div>
